[tool.poetry]
name = "newreleases"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
requests = "^2.27.1"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
